[package]
name = "potize"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = [] }
chrono = { version = "0.4.38", features = ["serde"] }
clia-tracing-config = "0.2.7"
diesel = { version = "2.2.6", features = ["postgres","chrono","uuid","r2d2"] }
r2d2 = "0.9.0"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.76.0", features = ["anyhow", "logging", "cors", "oapi", "jwt-auth", "rustls", "catch-panic", "cookie", "serve-static", "test"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
thiserror = "2.0.6"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics","serde"] }
validator = { version = "0.19.0", features = ["derive"] }
